--- a/index.html
+++ b/index.html
@@ -1,15 +1,66 @@
 <!DOCTYPE html>
 <html>
-
   <head>
     <title>HTML/CSS Lab</title>
     <link rel="stylesheet" href="https://unpkg.com/basscss@8.0.1/css/basscss.min.css">
     <style>
+      .muted {
+        color: #999
+      }
     </style>
   </head>
+  <body class="flex justify-center">
+      <div class="mt4" style="width: 600px;">
 
-  <body>
+          <div class="flex border-bottom mb2" id="tweet_container">
+            <div id="image">
+              <img class="rounded mr2" src="https://pbs.twimg.com/profile_images/702716672424206336/z-NXPADh_bigger.jpg" style="width: 50px">
+            </div>
+            <div class="" id="text">
+              <small>
+                <strong>Margaret Zhu</strong>
+                <span class="muted">@margaretuzhu - Jun 22</span>
+              </small>
+              <p>
+                Thanks to the wonderful @learn_co community for helping me solve "Tic Tac Toe Move"! I would not have been
+                able to do it without you guys!
+              </p>
+            </div>
+          </div>
+          
+          <div class="flex border-bottom mb2" id="tweet_container">
+            <div id="image">
+              <img class="rounded mr2" src="https://pbs.twimg.com/profile_images/702716672424206336/z-NXPADh_bigger.jpg" style="width: 50px">
+            </div>
+            <div class="" id="text">
+              <small>
+                <strong>Margaret Zhu</strong>
+                <span class="muted">@margaretuzhu - Jun 22</span>
+              </small>
+              <p>
+                Thanks to the wonderful @learn_co community for helping me solve "Tic Tac Toe Move"! I would not have been
+                able to do it without you guys!
+              </p>
+            </div>
+          </div>
 
+          <div class="flex border-bottom mb2" id="tweet_container">
+            <div id="image">
+              <img class="rounded mr2" src="https://pbs.twimg.com/profile_images/702716672424206336/z-NXPADh_bigger.jpg" style="width: 50px">
+            </div>
+            <div class="" id="text">
+              <small>
+                <strong>Margaret Zhu</strong>
+                <span class="muted">@margaretuzhu - Jun 22</span>
+              </small>
+              <p>
+                Thanks to the wonderful @learn_co community for helping me solve "Tic Tac Toe Move"! I would not have been
+                able to do it without you guys!
+              </p>
+            </div>
+          </div>
+          
+      </div>
   </body>
 
 </html>
